tests/ui/once_sync_writes_buckets_inert.stderr
error: `sync_writes_buckets` is not supported on `#[once]`: buckets only apply to `sync_writes = "by_key"`, which `#[once]` does not support
 --> tests/ui/once_sync_writes_buckets_inert.rs:7:4
  |
7 | fn my_fn() -> i32 {
  |    ^^^^^
